First pass at samples-data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(checkWQPdates)
 export(constructNWISURL)
 export(constructUseURL)
 export(constructWQPURL)
+export(construct_USGS_sample_request)
 export(countyCd)
 export(countyCdLookup)
 export(create_NWIS_bib)
@@ -37,6 +38,7 @@ export(readNWISsite)
 export(readNWISstat)
 export(readNWISuse)
 export(readNWISuv)
+export(readUSGSsample)
 export(readWQPdata)
 export(readWQPqw)
 export(readWQPsummary)
