Adding sample-data tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,14 +39,15 @@ export(readNWISsite)
 export(readNWISstat)
 export(readNWISuse)
 export(readNWISuv)
-export(readUSGSsample)
 export(readWQPdata)
 export(readWQPqw)
 export(readWQPsummary)
+export(read_USGS_samples)
 export(renameNWISColumns)
 export(setAccess)
 export(stateCd)
 export(stateCdLookup)
+export(summary_USGS_samples)
 export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPdata)
