Switch to summarize

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,7 +47,7 @@ export(renameNWISColumns)
 export(setAccess)
 export(stateCd)
 export(stateCdLookup)
-export(summary_USGS_samples)
+export(summarize_USGS_samples)
 export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPdata)
