--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -95,7 +95,7 @@ reference:
     desc: Functions to retrieve USGS data from new services.
     contents:
       - read_USGS_samples
-      - summary_USGS_samples
+      - summarize_USGS_samples
       - construct_USGS_sample_request
       - check_param
   - title: National Ground-Water Monitoring Network
