--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -47,6 +47,7 @@ jobs:
             any::data.table
             any::dplyr
             any::tidyr
+            any::ggplot2
             any::readxl
             any::gridExtra
             local::.
