Beginning work on new API services

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,9 +29,7 @@ Authors@R: c(
             comment=c(ORCID = "0000-0002-9775-6861")))
 Description: Collection of functions to help retrieve U.S. Geological Survey
     and U.S. Environmental Protection Agency water quality and
-    hydrology data from web services. Data are discovered from 
-    National Water Information System <https://waterservices.usgs.gov/> and <https://waterdata.usgs.gov/nwis>. 
-    Water quality data are obtained from the Water Quality Portal <https://www.waterqualitydata.us/>.
+    hydrology data from web services. 
 License: CC0
 Copyright: This software is in the public domain because it contains materials
     that originally came from the United States Geological Survey, an agency of
