--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export(addWaterYear)
 export(calcWaterYear)
 export(checkWQPdates)
+export(check_OGC_requests)
 export(check_param)
 export(constructNWISURL)
 export(constructUseURL)
 export(constructWQPURL)
 export(construct_USGS_sample_request)
+export(construct_dv_requests)
 export(countyCd)
 export(countyCdLookup)
 export(create_NWIS_bib)
@@ -42,6 +44,7 @@ export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
 export(readWQPsummary)
+export(read_USGS_dv)
 export(read_USGS_samples)
 export(renameNWISColumns)
 export(setAccess)
