add whisker to docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,6 +24,7 @@ RUN apt-get update -qq && apt-get -y --no-install-recommends install \
   r-cran-maps \
   r-cran-leaflet \
   r-cran-readxl \
+  r-cran-whisker \
   && apt-get install -y pandoc \
   && rm -rf /var/lib/apt/lists/*
 
