Rejigger structure and add vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(constructNWISURL)
 export(constructUseURL)
 export(constructWQPURL)
 export(construct_USGS_sample_request)
-export(construct_dv_requests)
+export(construct_api_requests)
 export(countyCd)
 export(countyCdLookup)
 export(create_NWIS_bib)
@@ -44,6 +44,7 @@ export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
 export(readWQPsummary)
+export(read_NWIS_ts_meta)
 export(read_USGS_dv)
 export(read_USGS_samples)
 export(renameNWISColumns)
