--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -25,6 +25,7 @@ RUN apt-get update -qq && apt-get -y --no-install-recommends install \
   r-cran-leaflet \
   r-cran-readxl \
   r-cran-whisker \
+  r-cran-ggplot2 \
   && apt-get install -y pandoc \
   && rm -rf /var/lib/apt/lists/*
 
