--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,9 +44,9 @@ export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
 export(readWQPsummary)
-export(read_NWIS_ts_meta)
 export(read_USGS_dv)
 export(read_USGS_samples)
+export(read_USGS_ts_meta)
 export(renameNWISColumns)
 export(setAccess)
 export(stateCd)
