make check_param more explicit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(addWaterYear)
 export(calcWaterYear)
 export(checkWQPdates)
 export(check_OGC_requests)
-export(check_param)
+export(check_USGS_sample_params)
 export(constructNWISURL)
 export(constructUseURL)
 export(constructWQPURL)
