Change to md style roxygen

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,7 @@ Copyright: This software is in the public domain because it contains materials
 Depends:
     R (>= 4.1.0)
 Imports:
-    curl,
+    curl (>= 6.0.0),
     lubridate (>= 1.5.0),
     stats,
     utils,
@@ -45,16 +45,17 @@ Imports:
     readr (>= 1.4.0),
     jsonlite,
     httr2,
-    whisker
+    whisker,
+    sf
 Suggests:
     covr,
     dplyr,
     knitr,
     rmarkdown,
-    sf,
     testthat
 Encoding: UTF-8
 BuildVignettes: true
 VignetteBuilder: knitr
 BugReports: https://github.com/DOI-USGS/dataRetrieval/issues
 RoxygenNote: 7.3.2
+Roxygen: list(markdown = TRUE)
