adding site service

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(readWQPqw)
 export(readWQPsummary)
 export(read_USGS_dv)
 export(read_USGS_samples)
+export(read_USGS_sites)
 export(read_USGS_ts_meta)
 export(renameNWISColumns)
 export(setAccess)
