--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -70,6 +70,7 @@ reference:
       - read_USGS_samples
       - read_USGS_dv
       - read_USGS_ts_meta
+      - read_USGS_sites
       - summarize_USGS_samples
       - check_USGS_sample_params
   - title: National Water Information System (NWIS)
