--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,9 +44,9 @@ export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
 export(readWQPsummary)
-export(read_USGS_dv)
+export(read_USGS_daily)
+export(read_USGS_monitoring_location)
 export(read_USGS_samples)
-export(read_USGS_sites)
 export(read_USGS_ts_meta)
 export(renameNWISColumns)
 export(setAccess)
