--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -47,13 +47,19 @@ jobs:
             any::data.table
             any::dplyr
             any::tidyr
+            any::ggplot2
+            any::zoo
+            any::sf
+            any::patchwork
+            any::maps
+            any::leaflet
+            any::readxl
             any::gridExtra
             local::.
           needs: website
 
       - name: Build site
         run: |
-          install.packages(c("zoo", "patchwork", "maps", "leaflet", "data.table", "tidyr"))
           pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE, dest_dir = "public") |
           file.copy(from = "./public/articles/logo.png",to = "./public/reference/logo.png")
         shell: Rscript {0}
