--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -68,7 +68,7 @@ reference:
     desc: Functions to retrieve USGS data from new services.
     contents:
       - read_USGS_samples
-      - read_USGS_dv
+      - read_USGS_daily
       - read_USGS_ts_meta
       - read_USGS_monitoring_location
       - summarize_USGS_samples
