Add a generalized retrieval function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(readWQPdata)
 export(readWQPqw)
 export(readWQPsummary)
 export(read_USGS_daily)
+export(read_USGS_data)
 export(read_USGS_monitoring_location)
 export(read_USGS_samples)
 export(read_USGS_ts_meta)
