--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -22,8 +22,8 @@ template:
     pkgdown-nav-height: 125px
 navbar:
   left:
-  - text: Background
-    href: articles/dataRetrieval.html
+  - text: Status
+    href: articles/Status.html
   - text: Function Help
     href: reference/index.html
   - text: Water Quality Data
@@ -40,6 +40,8 @@ navbar:
     menu:
     - text: Tutorial
       href: articles/tutorial.html
+    - text: Background
+      href: articles/dataRetrieval.html
     - text: Pivot Data
       href: articles/long_to_wide.html
     - text: Join by closest date
