--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -28,6 +28,7 @@ jobs:
       group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      API_USGS_PAT: ${{ secrets.API_USGS_PAT }}
       CUSTOM_DR_UA: 'GitHub_CI'
     steps:
       - uses: actions/checkout@581d62f320f2a4043a1ea6ac77290c60d27485cc
