--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,11 +44,11 @@ export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
 export(readWQPsummary)
-export(read_USGS_daily)
-export(read_USGS_data)
-export(read_USGS_monitoring_location)
-export(read_USGS_samples)
-export(read_USGS_ts_meta)
+export(read_waterdata)
+export(read_waterdata_daily)
+export(read_waterdata_monitoring_location)
+export(read_waterdata_samples)
+export(read_waterdata_ts_meta)
 export(renameNWISColumns)
 export(setAccess)
 export(stateCd)
