Add warning to setAccess

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,7 +53,7 @@ export(renameNWISColumns)
 export(setAccess)
 export(stateCd)
 export(stateCdLookup)
-export(summarize_USGS_samples)
+export(summarize_waterdata_samples)
 export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPdata)
