--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ variables:
   NOT_CRAN: "true"
   PAGES_OUTDIR: "$CI_PROJECT_DIR/public"
   CUSTOM_DR_UA: "GitLab_CI"
+  API_USGS_PAT: "${API_USGS_PAT}"
 
 build-image:
   stage: build
