getting ready for new functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,7 +47,9 @@ export(readWQPsummary)
 export(read_USGS_samples)
 export(read_waterdata)
 export(read_waterdata_daily)
+export(read_waterdata_latest_continuous)
 export(read_waterdata_monitoring_location)
+export(read_waterdata_parameter_code)
 export(read_waterdata_samples)
 export(read_waterdata_ts_meta)
 export(renameNWISColumns)
