--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -64,13 +64,14 @@ navbar:
   - icon: fa-github fa-lg
     href: https://github.com/DOI-USGS/dataRetrieval
 reference:
-  - title: USGS new data services
-    desc: Functions to retrieve USGS data from new services.
+  - title: USGS Water Data
+    desc: Functions to retrieve USGS Water Data APIs.
     contents:
       - read_waterdata_samples
       - read_waterdata_daily
       - read_waterdata_ts_meta
       - read_waterdata_monitoring_location
+      - read_waterdata_latest_continuous
       - read_waterdata
       - summarize_waterdata_samples
       - check_waterdata_sample_params
