new metadata stuff

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -65,13 +65,16 @@ navbar:
     href: https://github.com/DOI-USGS/dataRetrieval
 reference:
   - title: USGS Water Data
-    desc: Functions to retrieve USGS Water Data APIs.
+    desc: Functions to retrieve USGS Water Data.
     contents:
       - read_waterdata_samples
       - read_waterdata_daily
       - read_waterdata_ts_meta
       - read_waterdata_monitoring_location
       - read_waterdata_latest_continuous
+      - read_waterdata_parameter_codes
+      - read_waterdata_hydrologic_unit_codes
+      - read_waterdata_metadata
       - read_waterdata
       - summarize_waterdata_samples
       - check_waterdata_sample_params
