--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -73,7 +73,7 @@ reference:
       - read_waterdata_monitoring_location
       - read_waterdata_latest_continuous
       - read_waterdata_parameter_codes
-      - read_waterdata_metadata
+      - read_metadata
       - read_waterdata
       - summarize_waterdata_samples
       - check_waterdata_sample_params
