--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -48,4 +48,4 @@ jobs:
       - uses: r-lib/actions/check-r-package@3e56ca41aa267855f36891af7a495d24bfaa8373
         with:
           upload-snapshots: true
-          build_args: 'c("--no-manual","--compact-vignettes=gs+qpdf")'
+          build_args: 'c("--no-manual","--compact-vignettes=gs+qpdf", "--as-cran")'
