read_waterdata_field_measurements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(readWQPsummary)
 export(read_USGS_samples)
 export(read_waterdata)
 export(read_waterdata_daily)
+export(read_waterdata_field_measurements)
 export(read_waterdata_latest_continuous)
 export(read_waterdata_metadata)
 export(read_waterdata_monitoring_location)
