--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,7 @@ buildcheck:
   dependencies:
     - build-image
   script:
-    - Rscript -e 'devtools::install()'
+    - Rscript -e 'devtools::install(quick = TRUE, upgrade = "never")'
     - Rscript -e '#devtools::check(document = FALSE, args = "--no-tests", check_dir = Sys.getenv("BUILD_LOGS_DIR"), vignettes = FALSE)'
 
   
