--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -61,8 +61,8 @@ jobs:
           needs: website
       - name: Build slides
         run: |
-          quarto render tutorials/changes_slides_deck.qmd --output-dir public/tutorials |
-          quarto render tutorials/basic_slides_deck.qmd --output-dir public/tutorials
+          quarto render tutorials/changes_slides_deck.qmd --output-dir ./public/tutorials |
+          quarto render tutorials/basic_slides_deck.qmd --output-dir ./public/tutorials
       - name: Build site
         run: |
           pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE, dest_dir = "public") |
