--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -67,12 +67,21 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
       - name: Render Quarto Project
-        env:
-          QUARTO_PRINT_STACK: true
-        run: |
-          quarto render tutorials/changes_slides_deck.qmd --output-dir ./public/tutorials |
-          quarto render tutorials/basic_slides_deck.qmd --output-dir ./public/tutorials
-        shell: bash
+        runs: 
+          using: 'composite'
+          steps:
+            - name: 'render1'
+              env:
+                QUARTO_PRINT_STACK: true
+              run: |
+                quarto render tutorials/changes_slides_deck.qmd --output-dir ./public/tutorials 
+              shell: bash
+            - name: 'render2'
+              env:
+                QUARTO_PRINT_STACK: true  
+              run: |
+                quarto render tutorials/basic_slides_deck.qmd --output-dir ./public/tutorials
+              shell: bash
       - name: Upload artifact
         uses: actions/upload-pages-artifact@56afc609e74202658d3ffba0e8f6dda462b719fa
         with:
