--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -105,3 +105,5 @@ vignettes/qwdata_changes.Rmd
 vignettes/nwisData.rds
 vignettes/wqpData.rds
 _quarto.yml
+vignettes/basic_slides.Rmd
+vignettes/changes_slides.Rmd
