Add latest-daily infrastructure (and updated roxygen)

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -40,6 +40,7 @@ README.Rmd
 ^codecov\.yml$
 ^\.github$
 ^\.gitlab$
+^\.quarto$
 vignettes/tutorial.Rmd
 vignettes/phosData.rds
 vignettes/waterservices.png
