--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(read_waterdata)
 export(read_waterdata_daily)
 export(read_waterdata_field_measurements)
 export(read_waterdata_latest_continuous)
+export(read_waterdata_latest_daily)
 export(read_waterdata_metadata)
 export(read_waterdata_monitoring_location)
 export(read_waterdata_parameter_codes)
