--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -72,6 +72,7 @@ reference:
       - read_waterdata_ts_meta
       - read_waterdata_monitoring_location
       - read_waterdata_latest_continuous
+      - read_waterdata_latest_daily
       - read_waterdata_field_measurements
       - read_waterdata_parameter_codes
       - read_waterdata_metadata
