--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(readWQPqw)
 export(readWQPsummary)
 export(read_USGS_samples)
 export(read_waterdata)
+export(read_waterdata_continuous)
 export(read_waterdata_daily)
 export(read_waterdata_field_measurements)
 export(read_waterdata_latest_continuous)
