--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -69,6 +69,7 @@ reference:
     contents:
       - read_waterdata_samples
       - read_waterdata_daily
+      - read_waterdata_continuous
       - read_waterdata_ts_meta
       - read_waterdata_monitoring_location
       - read_waterdata_latest_continuous
