--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,8 @@ export(read_waterdata_metadata)
 export(read_waterdata_monitoring_location)
 export(read_waterdata_parameter_codes)
 export(read_waterdata_samples)
+export(read_waterdata_stats_interval)
+export(read_waterdata_stats_normal)
 export(read_waterdata_ts_meta)
 export(renameNWISColumns)
 export(setAccess)
