Add data.table version of get_statistics_data function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(create_WQP_bib)
 export(findNLDI)
 export(getWebServiceData)
 export(get_nldi_sources)
+export(get_statistics_data_rbindlist)
 export(importNGWMN)
 export(importRDB1)
 export(importWQP)
@@ -70,3 +71,12 @@ export(whatWQPsamples)
 export(whatWQPsites)
 export(wqp_check_status)
 export(zeroPad)
+importFrom(data.table,":=")
+importFrom(data.table,.BY)
+importFrom(data.table,.EACHI)
+importFrom(data.table,.GRP)
+importFrom(data.table,.I)
+importFrom(data.table,.N)
+importFrom(data.table,.NGRP)
+importFrom(data.table,.SD)
+importFrom(data.table,data.table)
