Rename and export get_params (now get_ogc_params).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(create_WQP_bib)
 export(findNLDI)
 export(getWebServiceData)
 export(get_nldi_sources)
+export(get_ogc_params)
 export(importNGWMN)
 export(importRDB1)
 export(importWQP)
