Cleanup vignette folder

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,16 +2,12 @@
 ^Temp$
 ^doc$
 .Rhistory
-vignettes/figures
 .gitignore
-dataRetrieval.Rproj
-dataRetrieval-concordance.tex
 README.md
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^\.Rproj\.gitignore
 ^\.Rproj\.RData
-^\.Rproj\dataRetrieval.Rproj
 ^\.Rproj\.Rhistory
 CONDUCT.md
 DISCLAIMER.md
@@ -21,15 +17,11 @@ pkgdown
 _pkgdown.yml
 vignettes/earthquake.Rmd
 vignettes/statsServiceMap.Rmd
-vignettes/usMaps.Rmd
-vignettes/usMaps_cache
 vignettes/movingAverages.Rmd
 vignettes/tutorial_slides.Rmd
 vignettes/nldi*
 vignettes/phWI.rds
 vignettes/az_data.rds
-vignettes/atascadero-creek-nldi.png
-vignettes/ucsb.png
 man/figures/highrezlogo-01.png
 man/figures/USGS_R.png
 ^CRAN-RELEASE$
@@ -46,46 +38,10 @@ vignettes/phosData.rds
 vignettes/waterservices.png
 vignettes/wqp_large_pull_targets.Rmd
 vignettes/wqp_large_pull_script.Rmd
-vignettes/full_pipeline.png
-vignettes/pipeline_snap_char_names.png
-vignettes/map_original_grid_cells.png
-vignettes/log_file.png
-vignettes/pipeline_snap_check_inventory.png
-vignettes/map_updated_grid_cells.png
-vignettes/pipeline_snap_update_inventory.png
 .gitlab-ci.yml
-deploy_simple.R
 .lintr
-vignettes/back_to_main.png
-vignettes/delete_branch.png
-vignettes/pipeline.png
-vignettes/merge_request.png
-vignettes/create_merge.png
-vignettes/doc_all.png
-vignettes/commit2.png
-vignettes/commit1.png
-vignettes/test.png
-vignettes/check.png
-vignettes/new_branch.png
-vignettes/pull.png
-vignettes/roxygen.png
-vignettes/install.png
-vignettes/git_repository.png
-vignettes/https_clone.png
-vignettes/new_project.png
 vignettes/Contributing.Rmd
-vignettes/no_manual.png
-vignettes/install_error.png
-vignettes/git_login.png
-vignettes/login.png
-vignettes/git_repository.png
-vignettes/https_clone.png
-vignettes/test_included.png
 vignettes/troubleshooting.Rmd
-vignettes/pat.png
-vignettes/github_code.png
-vignettes/save_pat.png
-vignettes/more_tests.png
 vignettes/stylesSlides.css
 vignettes/Status.Rmd
 vignettes/long_to_wide.Rmd
@@ -94,7 +50,7 @@ vignettes/wqx3_development_plan.Rmd
 vignettes/read_waterdata_functions.Rmd
 vignettes/dataretrieval_discrete_changes_images/*
 vignettes/Wide_data_example.xlsx
-vignettes/messyData.png
+^vignettes/images$
 ^ci$
 ^public$
 ^tutorials$
